<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fielden</groupId>
    <artifactId>tg-application-archetype</artifactId>
    <version>1.4.6-SNAPSHOT</version>
    <packaging>maven-archetype</packaging>

    <name>Trident Genesis Application Archetype</name>
    <description>
        This is a project template for constructing TG-based applications.
        It should be used to generate the initial project structure.
    </description>

    <build>
        <extensions>
            <extension>
                <groupId>org.apache.maven.archetype</groupId>
                <artifactId>archetype-packaging</artifactId>
                <version>3.1.0</version>
                <!-- from 3.1.1 to 3.2.0 there is a defect, which is annoying
					https://issues.apache.org/jira/browse/ARCHETYPE-584 -->
            </extension>
        </extensions>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>16</release>
                        <compilerArgs>
                            <arg>--enable-preview</arg>
                        </compilerArgs>
                        <encoding>UTF-8</encoding>
                        <optimize>true</optimize>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-archetype-plugin</artifactId>
                    <version>3.1.0</version>
                    <!-- from 3.1.1 to 3.2.0 there is a defect, which is annoying
						https://issues.apache.org/jira/browse/ARCHETYPE-584 -->
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>